force-app/main/default/objects/Event_Attendee__c/Event_Attendee__c.object-meta.xml
<CustomObject>
    <label>Event Attendee</label>
    <nameField>
        <displayFormat>EAN-  {000000}</displayFormat>
        <label>Event Attendee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>