force-app/main/default/objects/Event_Attendee__c/fields/Attendee_Name__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendee Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Event_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>