force-app/main/default/objects/Event_Attendee__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>Attendee_Contact__r.Email</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>