force-app/main/default/objects/Event_Attendee__c/fields/Trade_Ally_Event__c.field-meta.xml
<CustomField>
    <fullName>Trade_Ally_Event__c</fullName>
    <label>Trade Ally Event</label>
    <referenceTo>Trade_Ally_Event__c</referenceTo>
    <relationshipLabel>Event Attendees</relationshipLabel>
    <relationshipName>Event_Attendees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>